# penguine

./: CMakeLists.txt  CONTRIBUTING.md  README.md
docs/: ARCHITECTURE.md
examples/: array.pg  array_vm_test.pg  assignments.pg  base_super.pg  class_objects.pg  class_test.pg  control_flow.pg  control_flow_test.pg  error_test.pg  fib.pg  fib_rec.pg  functions.pg  functions2.pg  functions3.pg  functions4.pg  hello.pg  ifelse.pg  inheritance.pg  interpolation_test.pg  keyboard.pg  locals.pg  nested_loops.pg  oop_vm.pg  operators.pg  overloading.pg  polymorphism.pg  print_test.pg  repro.pg  test_class_parsing.pg  type_cast.pg  while_loop.pg
grammar/: grammar.txt  operators.xt
include/interpreter/: control_flow.h  environment.h  expr_evaluator.h  interpreter.h  runtime_value.h  stmt_executor.h
include/lexer/: lexer.h
include/parser/: ast.h  parser.h
include/symbol_table/: symbol_table.h  value.h
include/vm/: chunk.h  compiler.h  opcode.h  value.h  vm.h
include/vm/utils/: access_utils.h  value_utils.h
src/: main.cpp  test_interpreter.cpp  test_lexer.cpp  test_parser.cpp  test_parser_arrays.cpp  test_parser_classes.cpp  test_parser_functions.cpp  test_parser_loops.cpp  test_symbol_table.cpp  test_vm.cpp
src/interpreter/: deep_copy.cpp  environment.cpp  expr_evaluator.cpp  interpreter.cpp  stmt_executor.cpp
src/lexer/: lexer.cpp
src/parser/: parser.cpp
src/symbol_table/: symbol_table.cpp
src/vm/: chunk.cpp  compiler.cpp  compiler_core.cpp  compiler_expr.cpp  compiler_stmt.cpp  vm.cpp  vm_array.cpp  vm_call.cpp  vm_class.cpp  vm_ops.cpp
src/vm/utils/: access_utils.cpp  value_utils.cpp
tests/: inheritance_test.pg
